<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/p2p_fl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p2p_fl_header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chooseApplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseApplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_application_prompt"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/p2p_fl" />

    <ListView
        android:id="@+id/lvApplication"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="200dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/statusApplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseApplication" />

    <TextView
        android:id="@+id/statusApplication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_application_selected"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvApplication" />

    <include layout="@layout/deviceusage_fab" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="32dp"
        android:weightSum="3"
        app:layout_constraintBottom_toTopOf="@+id/privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusApplication">

        <Button
            android:id="@+id/btFinetune"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CustomButtonStyle"
            android:text="Finetune" />

        <Button
            android:id="@+id/btConfirmApplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/CustomButtonStyle"
            android:text="@string/confirm" />
    </LinearLayout>

    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_disclaimer"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>